# toxicity_detection_service

./: .gitignore  README.md  pyproject.toml
service/: sample.py  toxicity_api.py
