[tool.poetry]
name = "toxicity-detection-service"
version = "0.1.0"
description = ""
authors = ["Kirill Chirkunov <kirill.chirkunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.4"
pandas = "^2.2.3"
uvicorn = "^0.32.0"
torch = "2.4.1"
transformers = "^4.46.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
